src/snapshots/transmute__parser__tests__err_function_name_must_start_with_lower_case.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "X",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:13; [12, 14],
                    },
                ),
                span: 1:13; [12, 14],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Block(
                    [
                        StmtId {
                            id: 0,
                        },
                    ],
                ),
                span: 1:11; [10, 17],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:13; [12, 15],
            },
            Statement {
                id: StmtId {
                    id: 1,
                },
                kind: LetFn(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 5],
                    },
                    [],
                    None,
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 17],
            },
        ],
        root: [
            StmtId {
                id: 1,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Variable or function name 'X' must start with a lower case letter or an underscore",
                span: 1:5; [4, 5],
                level: Warning,
                generated_at: (
                    "src/parser.rs",
                    191,
                ),
            },
        ],
    },
)
