src/snapshots/transmute__parser__tests__err_let_fn_params_missing_type.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "f",
            "n",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Block(
                    [],
                ),
                span: 1:13; [12, 15],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: LetFn(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 5],
                    },
                    [],
                    None,
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 15],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `)`, expected one of identifier",
                span: 1:9; [8, 9],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    430,
                ),
            },
        ],
    },
)
