src/snapshots/transmute__parser__tests__err_let_missing_identifier.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [],
        statements: [],
        root: [],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `=`, expected one of identifier",
                span: 1:5; [4, 5],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    186,
                ),
            },
        ],
    },
)
