src/snapshots/transmute__parser__tests__err_let_missing_semicolon_after_ident.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let forty_two = a\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (14) `;` 1606, `.` 1042, `{` 855, `(` 852, `*` 1211, `/` 1209, `-` 1205, `+` 1207, `==` 1193, `!=` 1195, `>` 1197, `>=` 1199, `<` 1201, `<=` 1203",
                span: 1:18; [17, 17],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1606,
                ),
            },
        ],
    },
)
