src/snapshots/transmute__parser__tests__err_let_missing_semicolon_after_number.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let forty_two = 42\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (12) `;` 1597, `.` 1030, `*` 1203, `/` 1201, `-` 1197, `+` 1199, `==` 1185, `!=` 1187, `>` 1189, `>=` 1191, `<` 1193, `<=` 1195",
                span: 1:19; [18, 18],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1597,
                ),
            },
        ],
    },
)
