src/snapshots/transmute__parser__tests__err_missing_semicolon_after_if_expression.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"if true { 1; } else{ 1; } - 1 12;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(12), expected one of (13) `;` 1602, `.` 1038, `=` 1096, `*` 1207, `/` 1205, `-` 1201, `+` 1203, `==` 1189, `!=` 1191, `>` 1193, `>=` 1195, `<` 1197, `<=` 1199",
                span: 1:31; [30, 32],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1602,
                ),
            },
        ],
    },
)
