src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_close_curly_one_field.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of `,`, `.`, `}`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:9; [8, 8],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1344,
                ),
            },
        ],
    },
)
